[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/GodotTIE/text_interface_engine.gd" type="Script" id=1]
[ext_resource path="res://src/script/Narrativa.gd" type="Script" id=2]
[ext_resource path="res://font/Pixellari.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/sprite/background/introducao.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://font/Pixellari.ttf"

[sub_resource type="DynamicFont" id=2]
size = 23
outline_color = Color( 0.823529, 0.156863, 0.156863, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 3 )

[node name="Narrativa" type="Node2D"]
position = Vector2( 0.0835218, 0 )
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 4 )
offset = Vector2( 512, 288 )

[node name="TextInterfaceEngine" type="ReferenceRect" parent="."]
margin_left = 151.0
margin_top = 261.0
margin_right = 899.0
margin_bottom = 459.0
border_width = 4.5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
BREAK_ON_MAX_LINES = false
SCROLL_SKIPPED_LINES = true
FONT = SubResource( 2 )

[node name="Done" type="LinkButton" parent="."]
margin_left = 868.017
margin_top = 428.035
margin_right = 892.08
margin_bottom = 464.035
focus_mode = 2
custom_fonts/font = SubResource( 3 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="LinkButton" parent="."]
margin_left = 868.251
margin_top = 425.916
margin_right = 892.313
margin_bottom = 461.916
custom_fonts/font = SubResource( 4 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Done" to="." method="_onDone"]
[connection signal="pressed" from="Next" to="." method="_onNext"]
